--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "openapi-ts": "openapi-ts"
+    "openapi-ts": "openapi-ts",
+    "prepare": "husky install",
+    "lint": "npx eslint . --fix --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write .",
+    "fix": "npm run format && npm run lint"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -44,6 +47,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "husky": "^8.0.0"
   }
 }
